--- a/react/random-quote/package.json
+++ b/react/random-quote/package.json
@@ -7,10 +7,16 @@
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5"
   },
+  "homepage": "https://atangyj.github.io/react/random-quote",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
